# TBD_GW2BOT

./: Cargo.toml  Readme.md  config.toml.example
src/: main.rs
